--- a/week10/dec_demo-main/package.json
+++ b/week10/dec_demo-main/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app_d2.js",
-    "dev": "nodemon app_d2.js"
+    "start": "node app_d3.js",
+    "dev": "nodemon app_d3.js"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/Alec-Keeler/dec_demo#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
